- Fixed bug #55076 (requires() fails in a subdirectory with the in-built webserver)